--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-virtualized-select",
-  "version": "0.0.4",
+  "version": "1.0.0",
   "description": "Drop-down menu for React with windowing to support large numbers of options.",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
@@ -100,6 +100,7 @@
     "postcss-cli": "^2.3.3",
     "postcss-loader": "^0.8.0",
     "react": "^15.0.0",
+    "react-addons-shallow-compare": "^15.0.2",
     "react-addons-test-utils": "^0.14.3",
     "react-dom": "^15.0.0",
     "react-transform-catch-errors": "^1.0.2",
@@ -114,10 +115,11 @@
   },
   "dependencies": {
     "react-select": "^1.0.0-beta12",
-    "react-virtualized": "^6.0.4"
+    "react-virtualized": "^7.0.0"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
+    "react-addons-shallow-compare": "^0.14.0 || ^15.0.0",
     "react-dom": "^0.14.0 || ^15.0.0"
   }
 }
