--- a/package.json
+++ b/package.json
@@ -104,8 +104,10 @@
     "react-addons-shallow-compare": "^15.2.1",
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-select": "^1.0.0-rc.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
+    "react-virtualized": "^7.23.0",
     "redbox-react": "^1.0.1",
     "rimraf": "^2.4.3",
     "standard": "^5.4.1",
