--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-inline-elements": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-typecheck": "^3.6.1",
     "babel-polyfill": "^6.5.0",
     "babel-preset-es2015": "^6.5.0",
@@ -117,6 +118,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.11.6",
     "react-select": "^1.0.0-beta14",
     "react-virtualized": "^8.0.5"
   },
