--- a/package.json
+++ b/package.json
@@ -116,13 +116,13 @@
     "style-loader": "^0.13.0",
     "watch": "^0.16.0",
     "webpack": "^1.9.6",
-    "webpack-dev-server": "^1.14.0"
+    "webpack-dev-server": "^1.14.0",
+    "whatwg-fetch": "^2.0.1",
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
     "react-select": "^1.0.0-beta14",
-    "react-virtualized": "^8.0.5",
-    "whatwg-fetch": "^2.0.1"
+    "react-virtualized": "^8.0.5"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0",
