--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-virtualized-select",
-  "version": "2.4.2",
+  "version": "3.0.0",
   "description": "Drop-down menu for React with windowing to support large numbers of options.",
   "main": "dist/commonjs/index.js",
   "jsnext:main": "dist/es/index.js",
@@ -74,8 +74,8 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-plugin-typecheck": "^3.6.1",
     "babel-polyfill": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "bluebird": "^3.0.5",
@@ -102,14 +102,13 @@
     "postcss": "^5.0.14",
     "postcss-cli": "^2.3.3",
     "postcss-loader": "^0.8.0",
-    "react": "^15.2.1",
-    "react-addons-shallow-compare": "^15.2.1",
-    "react-addons-test-utils": "^15.2.1",
-    "react-dom": "^15.2.1",
+    "react": "^15.3.0",
+    "react-addons-test-utils": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-select": "^1.0.0-rc.2",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
-    "react-virtualized": "^7.23.0",
+    "react-virtualized": "^9.0.0",
     "redbox-react": "^1.0.1",
     "rimraf": "^2.4.3",
     "standard": "^5.4.1",
@@ -121,12 +120,12 @@
   },
   "dependencies": {
     "babel-runtime": "^6.11.6",
+    "prop-types": "^15.5.8",
     "react-select": "^1.0.0-rc.2",
-    "react-virtualized": "^8.0.5"
+    "react-virtualized": "^9.0.0"
   },
   "peerDependencies": {
-    "react": "^0.14.0 || ^15.0.0",
-    "react-addons-shallow-compare": "^0.14.0 || ^15.0.0",
-    "react-dom": "^0.14.0 || ^15.0.0"
+    "react": "^15.3.0 || ^16.0.0-alpha",
+    "react-dom": "^15.3.0 || ^16.0.0-alpha"
   }
 }
