--- a/package.json
+++ b/package.json
@@ -105,7 +105,7 @@
     "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
-    "react-select": "^1.0.0-rc.2",
+    "react-select": "^1.0.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.2",
     "react-virtualized": "^9.0.0",
